--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.29.1"
+    "nodemailer": "^6.6.3",
+    "sequelize": "^6.29.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
